resources/assets/sass/dashboard.scss
/* ... */
body {
    @include font-sans;
    min-width: 320px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-overflow-scrolling: touch;
}

.navbar {
    background-color: $c-dashboard-dark;

    .navbar-brand {
        font-weight: bold;

        @media (max-width: $screen-xs-max) {
            font-size: 14px;
        }
    }

    #spark-navbar-collapse {
        border: 0;
        box-shadow: none;

        .dropdown {
            .dropdown-toggle .caret { margin-left: 4px; }

            &.open .dropdown-toggle {
                background-color: darken($c-dashboard-dark, 5%);
                color: $c-dashboard-light;
            }

            .dropdown-menu {
                top: calc(100% - 1px);
                right: -1px;
                background-color: $c-dashboard-dark;
                > li > a:hover, > li > a:focus { background-color: transparent; }

                > li > a {
                    &, &:hover, &:focus { color: #fff; }
                }
            }
        }
    }

    .navbar-brand, .navbar-default .navbar-nav > li > a, .navbar-nav > li > a {
        &, &:hover, &:focus { color: $c-dashboard-light; }
    }

    .navbar-toggle {
        position: relative;
        bottom: 0px;
        left: 10px;
        border: 0;
        &, &:hover, &:focus { background-color: transparent; }

        .icon-bar {
            width: 27px;
            height: 4px;
            background-color: $c-dashboard-light;
            transition: background-color 100ms;
        }

        &:hover .icon-bar { background-color: darken($c-dashboard-dark, 15%); }
    }
}

.panel-default {
    margin-top: 20px;
    margin-bottom: 40px;

    .panel-body {
        background-color: lighten($c-dashboard-light, 1%);

        @media (max-width: $screen-xs-max) {
            padding: 0px;
        }

        .search {
            margin-bottom: 10px;
            width: 100%;

            @media (max-width: $screen-xs-max) {
                margin: 3px 3px 0px 3px;
                width: calc(100% - 6px);
            }
        }

        .help-text {
            margin-top: 10px;
            margin-bottom: 10px;
            padding: 5px 10px;
            border: 1px solid darken($c-dashboard-dark, 5%);
            border-radius: 5px;
            background-color: $c-dashboard-dark;
            color: $c-text-light;
        }
    }

    > .panel-heading {
        border-top: 1px solid darken($c-dashboard-dark, 5%);
        border-right: 1px solid darken($c-dashboard-dark, 5%);
        border-left: 1px solid darken($c-dashboard-dark, 5%);
        background-color: $c-dashboard-dark;
        color: $c-dashboard-light;
        font-weight: bold;

        .dashboard-heading {
            float: right;

            .btn {
                position: relative;
                bottom: 3px;
                min-width: 70px;
                height: 26px;
                padding-top: 1px;
                padding-bottom: 2px;
            }

            a {
                color: $c-text;
                text-decoration: none;
            }
        }
    }
}

.form-control:focus {
    border-color: $c-dashboard-dark;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px fade-out($c-dashboard-dark, 0.4);
}

.btn {
    border-color: darken($c-dashboard-dark, 5%);
    background-color: $c-dashboard-dark;
    transition: background-color 100ms;
    &:hover { background-color: darken($c-dashboard-dark, 5%); }
    &:focus { background-color: lighten($c-dashboard-dark, 5%); }

    &.btn-warning {
        border-color: darken($c-dashboard-edit, 10%);
        background-color: $c-dashboard-edit;
        &:hover { background-color: darken($c-dashboard-edit, 5%); }
        &:focus { background-color: lighten($c-dashboard-edit, 5%); }
    }

    &.btn-danger {
        border-color: darken($c-dashboard-delete, 10%);
        background-color: $c-dashboard-delete;
        &:hover { background-color: darken($c-dashboard-delete, 5%); }
        &:focus { background-color: lighten($c-dashboard-delete, 5%); }
    }

    &.btn-default {
        border-color: darken($c-dashboard-light, 10%);
        background-color: $c-dashboard-light;
        color: $c-text;
        &:hover { background-color: darken($c-dashboard-light, 5%); }
        &:focus { background-color: lighten($c-dashboard-light, 5%); }
    }

    &.btn-link { color: $c-dashboard-light; }
    &, &:hover, &:focus { text-decoration: none; }
}

.table {
    > thead > tr > th { border-bottom: 1px solid #666; }

    @media (max-width: $screen-md-max) {
        tr {
            &.heading-row { display: none; }
            &:not(:first-child) { border-top: 1px solid #ddd; }
        }

        > tbody > tr > td {
            &:first-child { padding-top: 20px; }
            &:last-child { padding-bottom: 20px; }
        }

        > tbody > tr {
            &:first-child > td:first-child { padding-top: 0px; }
            &:last-child > td:last-child { padding-bottom: 0px; }

            > td {
                display: block;
                border-top: 0;
            }
        }
    }

    @media (min-width: $screen-lg-min) {
        > tbody > tr > td { padding: 20px 8px; }
        > tbody > tr:last-child > td { padding-bottom: 0px; }
        .mobile-heading { display: none; }
    }
}
/* ... */

